Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_cipp42duu-proc.yml
+++ b/.github/workflows/master_cipp42duu-proc.yml
@@ -15,21 +15,11 @@ env:
 jobs:
   deploy:
     runs-on: windows-latest
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_1A1E27192F5B41FF811E786F456471D3 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_BE00CFF051CE43AB899CA4EF78C365BE }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_03BD64A2F69F4E57930E04AAE477955F }}
-
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
@@ -37,4 +27,4 @@ jobs:
           app-name: 'cipp42duu-proc'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4816CD21AAAF4BF2872E62A693479149 }}
